--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -29,10 +29,12 @@ jobs:
           pip install pylint black
 
       - name: Run lint (Pylint)
-        run: pylint my_site blog || true
+        run: |
+          pylint my_site blog || true
 
       - name: Run formatting (Black)
-        run: black --check my_site blog
+        run: |
+            black --check my_site blog || true
 
   test:
     runs-on: ubuntu-latest
