add .platform direcory with custom nginx.conf

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -4,3 +4,20 @@ option_settings:
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: staticfiles
     /files: uploads
+
+commands:
+  01_install_certbot:
+    command: "dnf install -y certbot"
+
+  02_install_certbot_nginx:
+    command: "dnf install -y python3-certbot-nginx"
+
+  03_create_ssl_certificate:
+    command: >
+      certbot --nginx -d noelalderman.com --email noele952@gmail.com --agree-tos --non-interactive
+    ignoreErrors: true
+
+  04_add_cron_job_for_renewal:
+    command: |
+      crontab -l | grep -q "certbot renew" || echo "0 0 1 * * certbot renew --quiet --no-self-upgrade" | crontab -
+    ignoreErrors: true  
